i18n: convert page headings to data-i18n and add keys for three locales

--- a/education-ambassadors.html
+++ b/education-ambassadors.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Education Ambassadors</h1>
+      <h1 data-i18n="education_ambassadors_title">Education Ambassadors</h1>
       <p>Support local teaching and learning through volunteer programs and resource development.</p>
     </section>
   </main>
