--- a/education.html
+++ b/education.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Education</h1>
+      <h1 data-i18n="education_title">Education</h1>
       <p>Programs to improve access to quality education and learning resources for children and adults.</p>
     </section>
   </main>
