--- a/food-security.html
+++ b/food-security.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Food Security</h1>
+      <h1 data-i18n="food_security_title">Food Security</h1>
       <p>Programs to increase soil fertility, improve agricultural practices, and support household nutrition.</p>
     </section>
   </main>
