--- a/get-involved.html
+++ b/get-involved.html
@@ -95,7 +95,7 @@
   </header>
   <main>
     <section id="how-to-get-involved" class="page-section">
-      <h1>How to Get Involved</h1>
+      <h1 data-i18n="get_involved_title">How to Get Involved</h1>
       <p>Volunteer, partner, or support our work through programs that reflect local priorities.</p>
     </section>
 
