--- a/inclusion.html
+++ b/inclusion.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Inclusion</h1>
+      <h1 data-i18n="inclusion_title">Inclusion</h1>
       <p>We support inclusive programming that ensures marginalised groups can access services and participate in decisions.</p>
     </section>
   </main>
