--- a/join-our-team.html
+++ b/join-our-team.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Join our Team</h1>
+      <h1 data-i18n="join_our_team_title">Join our Team</h1>
       <p>See current vacancies and ways to contribute professionally to our programs and operations.</p>
     </section>
   </main>
