--- a/our-approach.html
+++ b/our-approach.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Our Approach</h1>
+      <h1 data-i18n="our_approach_title">Our Approach</h1>
       <p>We prioritise local leadership, capacity building, and transparent governance in every activity.</p>
     </section>
   </main>
