--- a/partners.html
+++ b/partners.html
@@ -97,7 +97,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Partnership</h1>
+      <h1 data-i18n="partners_title">Partnership</h1>
       <p>Partner with us to support program delivery, capacity building, and community-led initiatives.</p>
     </section>
   </main>
