--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
   </header>
   <main>
     <section id="projects-overview" class="page-section">
-      <h1>Our Work</h1>
+      <h1 data-i18n="our_work_title">Our Work</h1>
       <p>An overview of our programs and thematic areas.</p>
     </section>
 
