--- a/relief-drr.html
+++ b/relief-drr.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Relief &amp; DRR</h1>
+      <h1 data-i18n="relief_drr_title">Relief &amp; DRR</h1>
       <p>Response readiness and disaster risk reduction activities to support communities in emergencies.</p>
     </section>
   </main>
