--- a/updates/updates.html
+++ b/updates/updates.html
@@ -97,7 +97,7 @@
   </header>
   <main>
     <section class="updates-hero">
-      <h1>Updates & News</h1>
+      <h1 data-i18n="updates_title">Updates & News</h1>
       <p class="lead">Recent activity, program progress, and transparency notes from Together for Sustainable Development. We publish concise, factual updates that explain what we did, why, and what comes next.</p>
     </section>
 
