--- a/what-we-do.html
+++ b/what-we-do.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>What We Do</h1>
+      <h1 data-i18n="what_we_do_title">What We Do</h1>
       <p>Our programs focus on health, education, livelihoods, and resilience — tailored to local needs.</p>
     </section>
   </main>
