--- a/where-we-work.html
+++ b/where-we-work.html
@@ -96,7 +96,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Where We Work</h1>
+      <h1 data-i18n="where_we_work_title">Where We Work</h1>
       <p>We partner with communities across Chin State and nearby regions to implement context-driven programs.</p>
     </section>
   </main>
