--- a/who-we-are.html
+++ b/who-we-are.html
@@ -97,7 +97,7 @@
 
   <main>
     <section class="page-section">
-      <h1>Who We Are</h1>
+      <h1 data-i18n="who_we_are_title">Who We Are</h1>
       <p>We work closely with local leaders and communities to support sustainable development that reflects local priorities and culture.</p>
     </section>
   </main>
