Modified footer and hero components for better UX

--- a/index.html
+++ b/index.html
@@ -102,7 +102,10 @@
     <section class="hero" aria-labelledby="hero-heading">
       <div class="hero-inner reveal" id="hero-content">
         <h1 id="hero-heading" data-i18n="home_hero">Together for Sustainable Development — supporting resilient communities in Chin State</h1>
-        <p class="lead" data-i18n="home_lead">We support community-led solutions in Chin State that strengthen education, livelihoods, and primary health through local partnerships, practical training, and long-term capacity building.</p>
+        <div class="hero-motto" aria-label="Site motto">
+          <span class="hero-motto-dynamic" aria-live="polite" data-i18n-words="home_motto"><span class="typewrap" aria-hidden="false"></span></span>
+        </div>
+        <p class="lead" data-i18n="home_lead">Together for Sustainable Development (TSD) aims to promote sustainable development in remote communities in southern Chin State. We have a particular focus on sustainable education – and by this we mean life-long and life-sustaining education: from children in school, to farmers trying new methods in the field, to women’s groups learning to run cooperatives, and more! Addressing the interconnected problems faced in these communities, we also aim to improve food security, promote inclusion, and meet urgent needs in times of crisis. Learn more about who we are.</p>
         <div class="hero-ctas">
           <a class="btn btn-primary" href="donate.html" aria-label="Donate to TSD">Donate</a>
           <a class="btn btn-ghost" href="get-involved.html" aria-label="Get involved with TSD">Get Involved</a>
@@ -118,8 +121,16 @@
             <div class="label" data-i18n="stats_farmers">Farmers pioneering sustainable farming methods</div>
           </div>
           <div class="stat">
-            <div class="num" data-count="3000">0</div>
+            <div class="num" data-count="3000">0</div><span class="num-suffix">+</span>
             <div class="label" data-i18n="stats_people_relief">People provided with relief items during disasters</div>
+          </div>
+          <div class="stat">
+            <div class="num" data-count="750">0</div>
+            <div class="label" data-i18n="stats_women_shg">Women participating in Self-Help Groups</div>
+          </div>
+          <div class="stat">
+            <div class="num" data-count="13">0</div>
+            <div class="label" data-i18n="stats_communities_disaster">Communities with disaster committees &amp; better prepared for crises</div>
           </div>
         </div>
       </div>
@@ -203,42 +214,100 @@
       <div id="testimonials-slider" data-items='[]' aria-live="polite"></div>
     </section>
   </main>
-  <footer class="site-footer" role="contentinfo">
-    <div class="footer-grid site-inner">
-      <div class="col about">
-        <h3>About TSD</h3>
-        <p>Together for Sustainable Development partners with remote communities in Chin State to co-design resilient livelihoods, education, and health services.</p>
-      </div>
-      <div class="col links">
-        <h4>Quick Links</h4>
-        <ul class="footer-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="updates.html">Updates</a></li>
-          <li><a href="donate.html">Donate</a></li>
-        </ul>
-      </div>
-      <div class="col contact">
-        <h4 data-i18n="footer_contact_title">Contact</h4>
-        <address>
-          <span data-i18n="contact_main_office">Main Office: Lailenpi Town, Chin State, Myanmar</span><br>
-          <span data-i18n="contact_main_phone">Phone: (+95) 976 800 9343</span><br>
-          <span data-i18n="contact_email">Email: tsd.info@togethergrowing.org</span>
-        </address>
-      </div>
-      <div class="col legal">
-        <h4>Community</h4>
-        <p>Local leadership and long-term partnerships guide our work; we publish reports for transparency.</p>
+  <footer class="site-footer" role="contentinfo" aria-label="Site footer">
+    <div class="footer-inner site-inner">
+      <nav class="footer-nav" aria-label="Footer navigation">
+        <section class="footer-col" aria-labelledby="footer-about">
+          <h4 id="footer-about"><button class="col-toggle" aria-expanded="false" aria-controls="col-about">About TSD Myanmar</button></h4>
+          <div id="col-about" class="col-list">
+            <ul>
+              <li><a href="who-we-are.html">Who We Are</a></li>
+              <li><a href="about.html#mission">Mission &amp; Vision</a></li>
+              <li><a href="about.html#history">Our History</a></li>
+              <li><a href="about.html#governance">Governance &amp; Transparency</a></li>
+              <li><a href="partners.html">Partners &amp; Donors</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="footer-col" aria-labelledby="footer-work">
+          <h4 id="footer-work"><button class="col-toggle" aria-expanded="false" aria-controls="col-work">Our Work</button></h4>
+          <div id="col-work" class="col-list">
+            <ul>
+              <li><a href="education.html">Education Programs</a></li>
+              <li><a href="projects.html">Sustainable Livelihoods</a></li>
+              <li><a href="food-security.html">Food Security &amp; Agriculture</a></li>
+              <li><a href="inclusion.html">Women &amp; Youth Empowerment</a></li>
+              <li><a href="relief-drr.html">Emergency &amp; Disaster Response</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="footer-col" aria-labelledby="footer-involve">
+          <h4 id="footer-involve"><button class="col-toggle" aria-expanded="false" aria-controls="col-involve">Get Involved</button></h4>
+          <div id="col-involve" class="col-list">
+            <ul>
+              <li><a href="donate.html">Donate</a></li>
+              <li><a href="get-involved.html">Volunteer</a></li>
+              <li><a href="partners.html">Partner With Us</a></li>
+              <li><a href="join-our-team.html">Careers &amp; Internships</a></li>
+              <li><a href="get-involved.html#community">Community Engagement</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="footer-col" aria-labelledby="footer-resources">
+          <h4 id="footer-resources"><button class="col-toggle" aria-expanded="false" aria-controls="col-resources">Resources &amp; Media</button></h4>
+          <div id="col-resources" class="col-list">
+            <ul>
+              <li><a href="updates.html">News &amp; Updates</a></li>
+              <li><a href="updates.html#reports">Reports &amp; Publications</a></li>
+              <li><a href="updates.html#stories">Success Stories</a></li>
+              <li><a href="updates.html#media">Photo &amp; Video Gallery</a></li>
+              <li><a href="docs/">Downloads</a></li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="footer-col" aria-labelledby="footer-contact">
+          <h4 id="footer-contact"><button class="col-toggle" aria-expanded="false" aria-controls="col-contact">Contact &amp; Legal</button></h4>
+          <div id="col-contact" class="col-list">
+            <ul>
+              <li><a href="contact.html">Contact Us</a></li>
+              <li><a href="privacy.html">Privacy Policy</a></li>
+              <li><a href="terms.html">Terms of Use</a></li>
+              <li><a href="updates.html#financials">Financial Reports</a></li>
+              <li><a href="safeguarding.html">Safeguarding Policy</a></li>
+            </ul>
+          </div>
+        </section>
+      </nav>
+    </div>
+  </footer>
+
+  <!-- Footermost bar: minimal copy and social links -->
+  <div class="site-footer-bottom" role="contentinfo" aria-label="Footer bottom">
+    <div class="site-inner footer-bottom-bar">
+      <div class="footer-copy-small">© Together for Sustainable Development (TSD) Myanmar — Registered non-profit organization</div>
+      <div class="footer-social footer-social-small" aria-label="Social links">
+        <a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Facebook">
+          <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M22 12c0-5.5-4.5-10-10-10S2 6.5 2 12c0 4.9 3.5 8.9 8 9.8v-6.9H8.2v-2.9H10V9.3c0-1.8 1-2.8 2.6-2.8.8 0 1.6.1 2 .1v2.2h-1.1c-1 0-1.3.6-1.3 1.2v1.6h2.5l-.4 2.9h-2.1V21.8c4.5-.9 8-4.9 8-9.8z"/></svg>
+        </a>
+        <a class="social-link" href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="YouTube">
+          <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M23 7s-.2-1.6-.8-2.3c-.7-.9-1.5-.9-1.9-1C17.9 3.3 12 3 12 3s-5.9.3-8.3.7c-.4 0-1.2.1-1.9 1C1.2 5.4 1 7 1 7S.8 8.6.8 10.3v1.4C.8 13.4 1 15 1 15s.2 1.6.8 2.3c.7.9 1.6.9 2 .9 1.4.1 6.1.6 6.1.6s5.9-.3 8.3-.7c.4 0 1.2-.1 1.9-1 .6-.7.8-2.3.8-2.3s.2-1.6.2-3.3V10.3C23.2 8.6 23 7 23 7zM9.7 14.6V9.4l5 2.6-5 2.6z"/></svg>
+        </a>
       </div>
     </div>
-    <div class="footer-bar">© 2026 Together for Sustainable Development — Built with care for communities</div>
-  </footer>
+  </div>
+
   <script src="js/core/theme.js"></script>
   <script src="js/core/icon-theme.js"></script>
   <script src="js/core/header.js"></script>
   <script src="js/core/i18n.js"></script>
   <script src="js/components/hero-slider.js" defer></script>
   <script src="js/components/testimonials.js" defer></script>
+  <script src="js/components/hero-motto.js" defer></script>
+  <script src="js/components/footer-nav.js" defer></script>
   <script src="js/main.js"></script>
 </body>
 </html>
