--- a/update.html
+++ b/update.html
@@ -9,48 +9,55 @@
   <link rel="stylesheet" href="/css/update.css">
 </head>
 <body>
-  <header class="site-header minimal" role="banner">
-    <div class="site-inner">
-      <a class="brand minimal-brand" href="/">Home</a>
-      <nav class="breadcrumb header-breadcrumb" aria-label="Breadcrumb"><a href="/updates.html">Updates</a> › <span id="crumb-title">...</span></nav>
-    </div>
-  </header>
+  <div class="updates-page-shell">
+    <div class="updates-aurora" aria-hidden="true"></div>
 
-  <main class="site-inner update-page" id="update-detail-root">
+    <div id="header"></div>
 
-    <article id="update-article" class="update-article" role="article">
-      <header class="update-header">
-        <h1 id="update-title" class="update-title">Loading…</h1>
-        <div class="update-meta"><time id="update-date"></time> <span id="update-badge" class="small-muted"></span></div>
-        <hr class="update-divider" aria-hidden="true" />
-      </header>
-
-      <div class="update-content-wrapper">
-        <div id="update-body" class="update-body" role="article" aria-live="polite">
-          <!-- skeletons inserted by JS while loading -->
-          <div class="skeleton skel-title"></div>
-          <div class="skeleton skel-meta"></div>
-          <div class="skeleton skel-para"></div>
-          <div class="skeleton skel-para"></div>
-          <div class="skeleton skel-para" style="width:80%"></div>
+    <main class="update-page" id="update-detail-root">
+      <section class="update-hero updates-layout">
+        <div class="crumb-row" aria-label="Breadcrumb">
+          <a class="pill pill-link" href="/updates.html" data-i18n="back_to_updates">
+            <span class="pill-icon" aria-hidden="true"></span>
+            <span data-i18n="back_to_updates">Back to updates</span>
+          </a>
+          <span class="crumb-divider" aria-hidden="true">•</span>
+          <span class="crumb-current" id="crumb-title">Loading…</span>
         </div>
+        <div class="update-hero-meta">
+          <span class="pill" id="update-badge"></span>
+          <time id="update-date" class="pill pill-ghost"></time>
+        </div>
+        <h1 id="update-title" class="update-title">Loading…</h1>
+        <p id="update-summary" class="update-summary-lead"></p>
+      </section>
 
-        <aside class="update-aside" id="update-aside" aria-label="Related actions">
-          <div class="download-ctas" id="update-ctas"></div>
-        </aside>
-      </div>
+      <section class="update-layout">
+        <article id="update-article" class="update-article" role="article">
+          <div class="update-content-wrapper">
+            <div id="update-body" class="update-body" role="article" aria-live="polite">
+              <div class="skeleton skel-title"></div>
+              <div class="skeleton skel-meta"></div>
+              <div class="skeleton skel-para"></div>
+              <div class="skeleton skel-para"></div>
+              <div class="skeleton skel-para" style="width:80%"></div>
+            </div>
 
-    </article>
-  </main>
+            <aside class="update-aside" id="update-aside" aria-label="Related actions">
+              <div class="download-ctas" id="update-ctas"></div>
+            </aside>
+          </div>
+        </article>
+      </section>
+    </main>
 
-  <footer class="site-footer minimal" role="contentinfo">
-    <div class="site-inner">
-      <div class="footer-bar">© 2026 Together for Sustainable Development — <a href="/privacy.html">Privacy policy</a></div>
-    </div>
-  </footer>
+    <div id="footer"></div>
+  </div>
 
   <script src="/js/core/theme.js"></script>
+  <script src="/js/core/icon-theme.js"></script>
   <script src="/js/core/header.js"></script>
+  <script src="/js/layout.js"></script>
   <script src="/js/core/i18n.js"></script>
   <script src="/js/core/news.js"></script>
   <script src="/js/pages/update-detail.js"></script>
