--- a/App/index.html
+++ b/App/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>TSD App Collection</title>
+  <link rel="icon" type="image/x-icon" href="Assets/PDFChhiana.ico" />
+  <link rel="shortcut icon" type="image/x-icon" href="Assets/PDFChhiana.ico" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
